Use a cutoff to prevent very different colors from matching

--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,6 @@
 body {
 	font-family: sans-serif;
+	line-height: 1.4;
 }
 
 h1, h2 {}
